plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
    id "com.diffplug.spotless" version '6.25.0'
}

group = 'com.socialapp'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Flyway
    implementation 'org.flywaydb:flyway-core:10.20.1'
    implementation 'org.flywaydb:flyway-database-postgresql:10.20.1'
    runtimeOnly 'org.postgresql:postgresql'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // WebClient (for external API calls)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Neo4j
    implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'

    // MinIO
    implementation 'io.minio:minio:8.5.10'

    // OpenSearch
    implementation 'org.opensearch.client:opensearch-java:2.13.0'
    implementation 'org.opensearch.client:opensearch-rest-client:2.13.0'

    // Axiom Logback Appender
    implementation 'io.github.yhsj:axiom-appender:1.0.2'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}

spotless {
    format 'misc', {
        target '*.gradle', '.gitattributes', '.gitignore'
        trimTrailingWhitespace()
        indentWithSpaces(3)
        endWithNewline()
        setEncoding('utf-8')
    }
    java {
        removeUnusedImports()
        googleJavaFormat('1.22.0').reorderImports(false).skipJavadocFormatting()
        indentWithSpaces(2)
        trimTrailingWhitespace()
        importOrder('\\#', 'java.', 'org.', 'com.')
        endWithNewline()
        toggleOffOn('// spotless:off', '// spotless:on')
    }
}
